[package]
description = "ECIES extension for WASM contracts"
license = "Apache-2.0"
name = "pallet-chain-extension-ecies"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
frame-support = {workspace = true}
frame-system = {workspace = true}
log = {workspace = true}
num-traits = {workspace = true}
pallet-contracts = {workspace = true}
pallet-contracts-primitives = {workspace = true}
parity-scale-codec = {workspace = true}
scale-info = {workspace = true}
sp-core = {workspace = true}
sp-runtime = {workspace = true}
sp-std = {workspace = true}

# ecies dependencies
chacha20poly1305 = {version = "0.10.1", default-features = false}
hkdf = {version = "0.12.3", default-features = false}
libsecp256k1 = {version = "0.7.1", default-features = false, features = ["static-context"]}
sha2 = {version = "0.10.7", default-features = false}

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "frame-support/std",
  "frame-system/std",
  "num-traits/std",
  "pallet-contracts/std",
  "pallet-contracts-primitives/std",
  "scale-info/std",
  "sp-std/std",
  "sp-core/std",
  "sp-runtime/std",
]
